--- a/pom.xml
+++ b/pom.xml
@@ -13,12 +13,12 @@
 	<parent>
 		<artifactId>gencross-plugins</artifactId>
 		<groupId>com.mrprez.gencross.plugins</groupId>
-		<version>1.1</version>
+		<version>1.2-SNAPSHOT</version>
 	</parent>
 	
 	<scm>
 		<connection>scm:git:git://github.com/gencross-plugins/fusina.git</connection>
-		<developerConnection>scm:git:https://github.com/gencross-plugins/fusina.git</developerConnection>
+		<developerConnection>scm:git@github.com:gencross-plugins/fusina.git</developerConnection>
 		<tag>HEAD</tag>
 	</scm>
 	
