--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@
 	
 	<scm>
 		<connection>scm:git:git://github.com/gencross-plugins/fusina.git</connection>
-		<developerConnection>scm:git@github.com:gencross-plugins/fusina.git</developerConnection>
+		<developerConnection>scm:git:git@github.com:gencross-plugins/fusina.git</developerConnection>
 		<tag>HEAD</tag>
 	</scm>
 	
